@@ -9,7 +9,6 @@ package com.ford.syncV4.android.manager;
 
 import com.ford.syncV4.exception.SyncException;
 import com.ford.syncV4.proxy.RPCRequest;
-import com.ford.syncV4.proxy.SyncProxyALM;
 import com.ford.syncV4.proxy.rpc.PutFile;
 
 import java.util.Vector;
@@ -19,6 +18,10 @@ import java.util.Vector;
  * resumption procedure
  */
 public class RPCRequestsResumableManager {
+
+    public interface RPCRequestsResumableManagerCallback {
+        public void onSendRequest(RPCRequest request);
+    }
 
     // This Vector keep all RPC requests since the last successful application start in case of
     // connection exists
@@ -30,11 +33,22 @@ public class RPCRequestsResumableManager {
     // This Vector keep all PutFiles since the last successful application start
     private final Vector<PutFile> putFiles = new Vector<PutFile>();
 
+    private RPCRequestsResumableManagerCallback callback;
+
     /**
      * Constructor
      */
     public RPCRequestsResumableManager() {
 
+    }
+
+    /**
+     * Set callback handler to inform about outgoing requests
+     *
+     * @param callback {@link com.ford.syncV4.android.manager.RPCRequestsResumableManager.RPCRequestsResumableManagerCallback}
+     */
+    public void setCallback(RPCRequestsResumableManagerCallback callback) {
+        this.callback = callback;
     }
 
     /**
@@ -56,9 +70,9 @@ public class RPCRequestsResumableManager {
     }
 
     /**
+     * Add {@link com.ford.syncV4.proxy.rpc.PutFile} request to the collection
      *
-     *
-     * @param putFile
+     * @param putFile {@link com.ford.syncV4.proxy.rpc.PutFile} request
      */
     public void addPutFile(PutFile putFile) {
         putFiles.add(putFile);
@@ -67,35 +81,39 @@ public class RPCRequestsResumableManager {
     /**
      * Send all RPC requests which were add when there were connection to SDL.
      *
-     * @param syncProxy {@link com.ford.syncV4.proxy.SyncProxyALM} proxy object
      * @throws SyncException
      */
-    public void sendAllRequestsConnected(SyncProxyALM syncProxy) throws SyncException {
+    public void sendAllRequestsConnected() throws SyncException {
         for (RPCRequest request : rpcRequestsResumableConnected) {
-            syncProxy.sendRPCRequest(request);
+            if (callback != null) {
+                callback.onSendRequest(request);
+            }
         }
     }
 
     /**
      * Send all RPC requests which were add when there were no connection to SDL.
      *
-     * @param syncProxy {@link com.ford.syncV4.proxy.SyncProxyALM} proxy object
      * @throws SyncException
      */
-    public void sendAllRequestsDisconnected(SyncProxyALM syncProxy) throws SyncException {
+    public void sendAllRequestsDisconnected() throws SyncException {
         for (RPCRequest request : rpcRequestsResumableDisconnected) {
-            syncProxy.sendRPCRequest(request);
+            if (callback != null) {
+                callback.onSendRequest(request);
+            }
         }
     }
 
     /**
+     * Send all RPC requests which were add since last success connection
      *
-     * @param syncProxy
      * @throws SyncException
      */
-    public void sendAllPutFiles(SyncProxyALM syncProxy) throws SyncException {
+    public void sendAllPutFiles() throws SyncException {
         for (PutFile putFile : putFiles) {
-            syncProxy.sendRPCRequest(putFile);
+            if (callback != null) {
+                callback.onSendRequest(putFile);
+            }
         }
     }
 
@@ -107,7 +125,7 @@ public class RPCRequestsResumableManager {
     }
 
     /**
-     *
+     * Clean all {@link com.ford.syncV4.proxy.rpc.PutFile}'s requests collection
      */
     public void cleanAllPutFiles() {
         putFiles.clear();
@@ -139,8 +157,7 @@ public class RPCRequestsResumableManager {
     }
 
     /**
-     *
-     * @return
+     * @return a size of the {@link com.ford.syncV4.proxy.rpc.PutFile}'s requests collection
      */
     public int getPutFilesSize() {
         return putFiles.size();
