@@ -1,3 +1,6 @@
+[CW10]
+* Log messages of the PutFile request when resume application
+
 [CW9]
 + SYncProxyAndroid SDK: update heartbeat logic
 + 'HashId' management dialog
